--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Spotify - Web Player</title>
+    <title>PlayBeatz - Web Player</title>
     <script src="https://kit.fontawesome.com/84fa037635.js" crossorigin="anonymous"></script>
-    <link rel="icon" href="photos\favicon-spotify.png" type="image/png">
+    <link rel="icon" href="C:\Users\SUMON\Downloads\svgviewer-png-output.png" type="image/png">
     <link rel="stylesheet" href="main_page.css">
     <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <script src="theme.js" defer></script>
